src/lexyacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init_exp
Rule 1     init_exp -> at_exp
Rule 2     init_exp -> PROTOCOL NULL at_exp
Rule 3     init_exp -> PROTOCOL NULL address_exp NULL at_exp
Rule 4     init_exp -> PROTOCOL NULL address_exp NULL at_exp NULL param_exp
Rule 5     init_exp -> PROTOCOL NULL address_exp
Rule 6     init_exp -> PROTOCOL NULL address_exp NULL param_exp
Rule 7     init_exp -> PROTOCOL NULL address_exp NULL port_number_block_exp
Rule 8     init_exp -> PROTOCOL NULL address_exp NULL port_number_block_exp NULL param_exp
Rule 9     at_exp -> at_protocol_exp
Rule 10    at_exp -> at_param_exp
Rule 11    at_exp -> at_exp NULL at_protocol_exp
Rule 12    at_exp -> at_exp NULL at_param_exp
Rule 13    at_protocol_exp -> AT
Rule 14    at_protocol_exp -> AT PROTOCOL
Rule 15    at_protocol_exp -> AT NOT PROTOCOL
Rule 16    at_protocol_exp -> at_protocol_exp COMMA PROTOCOL
Rule 17    at_protocol_exp -> at_protocol_exp COMMA NOT PROTOCOL
Rule 18    at_param_exp -> INNER AT address_exp
Rule 19    at_param_exp -> AT address_exp
Rule 20    at_param_exp -> INNER AT address_exp EQ sn_exp
Rule 21    at_param_exp -> INNER AT address_exp EQ NUMBER
Rule 22    address_exp -> ipv4_exp
Rule 23    address_exp -> domain_exp
Rule 24    address_exp -> address_exp SEMICOLON ipv4_exp
Rule 25    address_exp -> address_exp SEMICOLON domain_exp
Rule 26    domain_exp -> domain_block_exp
Rule 27    domain_exp -> domain_exp COMMA domain_block_exp
Rule 28    ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
Rule 29    port_number_block_exp -> number_block_exp
Rule 30    port_number_block_exp -> NOT number_block_exp
Rule 31    port_number_block_exp -> number_block_exp NOT number_block_exp
Rule 32    ipv4_number_block_exp -> number_block_exp
Rule 33    ipv4_number_block_exp -> NOT number_block_exp
Rule 34    ipv4_number_block_exp -> number_block_exp NOT number_block_exp
Rule 35    sn_exp -> WORD
Rule 36    sn_exp -> NUMBER WORD
Rule 37    sn_exp -> sn_exp WORD
Rule 38    sn_exp -> sn_exp NUMBER
Rule 39    domain_block_exp -> sn_exp DOT sn_exp
Rule 40    domain_block_exp -> ipv4_number_block_exp DOT sn_exp
Rule 41    domain_block_exp -> domain_block_exp DOT sn_exp
Rule 42    domain_block_exp -> domain_block_exp DOT NUMBER
Rule 43    number_block_exp -> number_exp
Rule 44    number_block_exp -> number_block_exp COMMA number_exp
Rule 45    number_exp -> NUMBER
Rule 46    number_exp -> NUMBER RANGE NUMBER
Rule 47    number_exp -> NUMBER RANGE NUMBER MOD NUMBER
Rule 48    param_exp -> INNER EQ sn_exp
Rule 49    param_exp -> INNER EQ address_exp
Rule 50    param_exp -> INNER EQ NULL
Rule 51    param_exp -> INNER EQ port_number_block_exp
Rule 52    param_exp -> INNER EQ sn_exp NULL param_exp
Rule 53    param_exp -> INNER EQ address_exp NULL param_exp
Rule 54    param_exp -> INNER EQ port_number_block_exp NULL param_exp

Terminals, with rules where they appear

AT                   : 13 14 15 18 19 20 21
COMMA                : 16 17 27 44
DOT                  : 28 28 28 39 40 41 42
EQ                   : 20 21 48 49 50 51 52 53 54
INNER                : 18 20 21 48 49 50 51 52 53 54
MOD                  : 47
NOT                  : 15 17 30 31 33 34
NULL                 : 2 3 3 4 4 4 5 6 6 7 7 8 8 8 11 12 50 52 53 54
NUMBER               : 21 36 38 42 45 46 46 47 47 47
PROTOCOL             : 2 3 4 5 6 7 8 14 15 16 17
RANGE                : 46 47
SEMICOLON            : 24 25
WORD                 : 35 36 37
error                : 

Nonterminals, with rules where they appear

address_exp          : 3 4 5 6 7 8 18 19 20 21 24 25 49 53
at_exp               : 1 2 3 4 11 12
at_param_exp         : 10 12
at_protocol_exp      : 9 11 16 17
domain_block_exp     : 26 27 41 42
domain_exp           : 23 25 27
init_exp             : 0
ipv4_exp             : 22 24
ipv4_number_block_exp : 28 28 28 28 40
number_block_exp     : 29 30 31 31 32 33 34 34 44
number_exp           : 43 44
param_exp            : 4 6 8 52 53 54
port_number_block_exp : 7 8 51 54
sn_exp               : 20 37 38 39 39 40 41 48 52

Parsing method: LALR

state 0

    (0) S' -> . init_exp
    (1) init_exp -> . at_exp
    (2) init_exp -> . PROTOCOL NULL at_exp
    (3) init_exp -> . PROTOCOL NULL address_exp NULL at_exp
    (4) init_exp -> . PROTOCOL NULL address_exp NULL at_exp NULL param_exp
    (5) init_exp -> . PROTOCOL NULL address_exp
    (6) init_exp -> . PROTOCOL NULL address_exp NULL param_exp
    (7) init_exp -> . PROTOCOL NULL address_exp NULL port_number_block_exp
    (8) init_exp -> . PROTOCOL NULL address_exp NULL port_number_block_exp NULL param_exp
    (9) at_exp -> . at_protocol_exp
    (10) at_exp -> . at_param_exp
    (11) at_exp -> . at_exp NULL at_protocol_exp
    (12) at_exp -> . at_exp NULL at_param_exp
    (13) at_protocol_exp -> . AT
    (14) at_protocol_exp -> . AT PROTOCOL
    (15) at_protocol_exp -> . AT NOT PROTOCOL
    (16) at_protocol_exp -> . at_protocol_exp COMMA PROTOCOL
    (17) at_protocol_exp -> . at_protocol_exp COMMA NOT PROTOCOL
    (18) at_param_exp -> . INNER AT address_exp
    (19) at_param_exp -> . AT address_exp
    (20) at_param_exp -> . INNER AT address_exp EQ sn_exp
    (21) at_param_exp -> . INNER AT address_exp EQ NUMBER

    PROTOCOL        shift and go to state 3
    AT              shift and go to state 6
    INNER           shift and go to state 7

    init_exp                       shift and go to state 1
    at_exp                         shift and go to state 2
    at_protocol_exp                shift and go to state 4
    at_param_exp                   shift and go to state 5

state 1

    (0) S' -> init_exp .



state 2

    (1) init_exp -> at_exp .
    (11) at_exp -> at_exp . NULL at_protocol_exp
    (12) at_exp -> at_exp . NULL at_param_exp

    $end            reduce using rule 1 (init_exp -> at_exp .)
    NULL            shift and go to state 8


state 3

    (2) init_exp -> PROTOCOL . NULL at_exp
    (3) init_exp -> PROTOCOL . NULL address_exp NULL at_exp
    (4) init_exp -> PROTOCOL . NULL address_exp NULL at_exp NULL param_exp
    (5) init_exp -> PROTOCOL . NULL address_exp
    (6) init_exp -> PROTOCOL . NULL address_exp NULL param_exp
    (7) init_exp -> PROTOCOL . NULL address_exp NULL port_number_block_exp
    (8) init_exp -> PROTOCOL . NULL address_exp NULL port_number_block_exp NULL param_exp

    NULL            shift and go to state 9


state 4

    (9) at_exp -> at_protocol_exp .
    (16) at_protocol_exp -> at_protocol_exp . COMMA PROTOCOL
    (17) at_protocol_exp -> at_protocol_exp . COMMA NOT PROTOCOL

    NULL            reduce using rule 9 (at_exp -> at_protocol_exp .)
    $end            reduce using rule 9 (at_exp -> at_protocol_exp .)
    COMMA           shift and go to state 10


state 5

    (10) at_exp -> at_param_exp .

    NULL            reduce using rule 10 (at_exp -> at_param_exp .)
    $end            reduce using rule 10 (at_exp -> at_param_exp .)


state 6

    (13) at_protocol_exp -> AT .
    (14) at_protocol_exp -> AT . PROTOCOL
    (15) at_protocol_exp -> AT . NOT PROTOCOL
    (19) at_param_exp -> AT . address_exp
    (22) address_exp -> . ipv4_exp
    (23) address_exp -> . domain_exp
    (24) address_exp -> . address_exp SEMICOLON ipv4_exp
    (25) address_exp -> . address_exp SEMICOLON domain_exp
    (28) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (26) domain_exp -> . domain_block_exp
    (27) domain_exp -> . domain_exp COMMA domain_block_exp
    (32) ipv4_number_block_exp -> . number_block_exp
    (33) ipv4_number_block_exp -> . NOT number_block_exp
    (34) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (39) domain_block_exp -> . sn_exp DOT sn_exp
    (40) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (41) domain_block_exp -> . domain_block_exp DOT sn_exp
    (42) domain_block_exp -> . domain_block_exp DOT NUMBER
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    COMMA           reduce using rule 13 (at_protocol_exp -> AT .)
    NULL            reduce using rule 13 (at_protocol_exp -> AT .)
    $end            reduce using rule 13 (at_protocol_exp -> AT .)
    PROTOCOL        shift and go to state 11
    NOT             shift and go to state 12
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    address_exp                    shift and go to state 13
    ipv4_exp                       shift and go to state 14
    domain_exp                     shift and go to state 15
    ipv4_number_block_exp          shift and go to state 16
    domain_block_exp               shift and go to state 17
    number_block_exp               shift and go to state 18
    sn_exp                         shift and go to state 19
    number_exp                     shift and go to state 21

state 7

    (18) at_param_exp -> INNER . AT address_exp
    (20) at_param_exp -> INNER . AT address_exp EQ sn_exp
    (21) at_param_exp -> INNER . AT address_exp EQ NUMBER

    AT              shift and go to state 23


state 8

    (11) at_exp -> at_exp NULL . at_protocol_exp
    (12) at_exp -> at_exp NULL . at_param_exp
    (13) at_protocol_exp -> . AT
    (14) at_protocol_exp -> . AT PROTOCOL
    (15) at_protocol_exp -> . AT NOT PROTOCOL
    (16) at_protocol_exp -> . at_protocol_exp COMMA PROTOCOL
    (17) at_protocol_exp -> . at_protocol_exp COMMA NOT PROTOCOL
    (18) at_param_exp -> . INNER AT address_exp
    (19) at_param_exp -> . AT address_exp
    (20) at_param_exp -> . INNER AT address_exp EQ sn_exp
    (21) at_param_exp -> . INNER AT address_exp EQ NUMBER

    AT              shift and go to state 6
    INNER           shift and go to state 7

    at_protocol_exp                shift and go to state 24
    at_param_exp                   shift and go to state 25

state 9

    (2) init_exp -> PROTOCOL NULL . at_exp
    (3) init_exp -> PROTOCOL NULL . address_exp NULL at_exp
    (4) init_exp -> PROTOCOL NULL . address_exp NULL at_exp NULL param_exp
    (5) init_exp -> PROTOCOL NULL . address_exp
    (6) init_exp -> PROTOCOL NULL . address_exp NULL param_exp
    (7) init_exp -> PROTOCOL NULL . address_exp NULL port_number_block_exp
    (8) init_exp -> PROTOCOL NULL . address_exp NULL port_number_block_exp NULL param_exp
    (9) at_exp -> . at_protocol_exp
    (10) at_exp -> . at_param_exp
    (11) at_exp -> . at_exp NULL at_protocol_exp
    (12) at_exp -> . at_exp NULL at_param_exp
    (22) address_exp -> . ipv4_exp
    (23) address_exp -> . domain_exp
    (24) address_exp -> . address_exp SEMICOLON ipv4_exp
    (25) address_exp -> . address_exp SEMICOLON domain_exp
    (13) at_protocol_exp -> . AT
    (14) at_protocol_exp -> . AT PROTOCOL
    (15) at_protocol_exp -> . AT NOT PROTOCOL
    (16) at_protocol_exp -> . at_protocol_exp COMMA PROTOCOL
    (17) at_protocol_exp -> . at_protocol_exp COMMA NOT PROTOCOL
    (18) at_param_exp -> . INNER AT address_exp
    (19) at_param_exp -> . AT address_exp
    (20) at_param_exp -> . INNER AT address_exp EQ sn_exp
    (21) at_param_exp -> . INNER AT address_exp EQ NUMBER
    (28) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (26) domain_exp -> . domain_block_exp
    (27) domain_exp -> . domain_exp COMMA domain_block_exp
    (32) ipv4_number_block_exp -> . number_block_exp
    (33) ipv4_number_block_exp -> . NOT number_block_exp
    (34) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (39) domain_block_exp -> . sn_exp DOT sn_exp
    (40) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (41) domain_block_exp -> . domain_block_exp DOT sn_exp
    (42) domain_block_exp -> . domain_block_exp DOT NUMBER
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    AT              shift and go to state 6
    INNER           shift and go to state 7
    NOT             shift and go to state 28
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    at_exp                         shift and go to state 26
    address_exp                    shift and go to state 27
    at_protocol_exp                shift and go to state 4
    at_param_exp                   shift and go to state 5
    ipv4_exp                       shift and go to state 14
    domain_exp                     shift and go to state 15
    sn_exp                         shift and go to state 19
    ipv4_number_block_exp          shift and go to state 16
    domain_block_exp               shift and go to state 17
    number_block_exp               shift and go to state 18
    number_exp                     shift and go to state 21

state 10

    (16) at_protocol_exp -> at_protocol_exp COMMA . PROTOCOL
    (17) at_protocol_exp -> at_protocol_exp COMMA . NOT PROTOCOL

    PROTOCOL        shift and go to state 29
    NOT             shift and go to state 30


state 11

    (14) at_protocol_exp -> AT PROTOCOL .

    COMMA           reduce using rule 14 (at_protocol_exp -> AT PROTOCOL .)
    NULL            reduce using rule 14 (at_protocol_exp -> AT PROTOCOL .)
    $end            reduce using rule 14 (at_protocol_exp -> AT PROTOCOL .)


state 12

    (15) at_protocol_exp -> AT NOT . PROTOCOL
    (33) ipv4_number_block_exp -> NOT . number_block_exp
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    PROTOCOL        shift and go to state 31
    NUMBER          shift and go to state 33

    number_block_exp               shift and go to state 32
    number_exp                     shift and go to state 21

state 13

    (19) at_param_exp -> AT address_exp .
    (24) address_exp -> address_exp . SEMICOLON ipv4_exp
    (25) address_exp -> address_exp . SEMICOLON domain_exp

    NULL            reduce using rule 19 (at_param_exp -> AT address_exp .)
    $end            reduce using rule 19 (at_param_exp -> AT address_exp .)
    SEMICOLON       shift and go to state 34


state 14

    (22) address_exp -> ipv4_exp .

    SEMICOLON       reduce using rule 22 (address_exp -> ipv4_exp .)
    NULL            reduce using rule 22 (address_exp -> ipv4_exp .)
    $end            reduce using rule 22 (address_exp -> ipv4_exp .)
    EQ              reduce using rule 22 (address_exp -> ipv4_exp .)


state 15

    (23) address_exp -> domain_exp .
    (27) domain_exp -> domain_exp . COMMA domain_block_exp

    SEMICOLON       reduce using rule 23 (address_exp -> domain_exp .)
    NULL            reduce using rule 23 (address_exp -> domain_exp .)
    $end            reduce using rule 23 (address_exp -> domain_exp .)
    EQ              reduce using rule 23 (address_exp -> domain_exp .)
    COMMA           shift and go to state 35


state 16

    (28) ipv4_exp -> ipv4_number_block_exp . DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (40) domain_block_exp -> ipv4_number_block_exp . DOT sn_exp

    DOT             shift and go to state 36


state 17

    (26) domain_exp -> domain_block_exp .
    (41) domain_block_exp -> domain_block_exp . DOT sn_exp
    (42) domain_block_exp -> domain_block_exp . DOT NUMBER

    COMMA           reduce using rule 26 (domain_exp -> domain_block_exp .)
    SEMICOLON       reduce using rule 26 (domain_exp -> domain_block_exp .)
    NULL            reduce using rule 26 (domain_exp -> domain_block_exp .)
    $end            reduce using rule 26 (domain_exp -> domain_block_exp .)
    EQ              reduce using rule 26 (domain_exp -> domain_block_exp .)
    DOT             shift and go to state 37


state 18

    (32) ipv4_number_block_exp -> number_block_exp .
    (34) ipv4_number_block_exp -> number_block_exp . NOT number_block_exp
    (44) number_block_exp -> number_block_exp . COMMA number_exp

    DOT             reduce using rule 32 (ipv4_number_block_exp -> number_block_exp .)
    SEMICOLON       reduce using rule 32 (ipv4_number_block_exp -> number_block_exp .)
    NULL            reduce using rule 32 (ipv4_number_block_exp -> number_block_exp .)
    $end            reduce using rule 32 (ipv4_number_block_exp -> number_block_exp .)
    EQ              reduce using rule 32 (ipv4_number_block_exp -> number_block_exp .)
    NOT             shift and go to state 38
    COMMA           shift and go to state 39


state 19

    (39) domain_block_exp -> sn_exp . DOT sn_exp
    (37) sn_exp -> sn_exp . WORD
    (38) sn_exp -> sn_exp . NUMBER

    DOT             shift and go to state 40
    WORD            shift and go to state 41
    NUMBER          shift and go to state 42


state 20

    (36) sn_exp -> NUMBER . WORD
    (45) number_exp -> NUMBER .
    (46) number_exp -> NUMBER . RANGE NUMBER
    (47) number_exp -> NUMBER . RANGE NUMBER MOD NUMBER

    WORD            shift and go to state 43
    NOT             reduce using rule 45 (number_exp -> NUMBER .)
    COMMA           reduce using rule 45 (number_exp -> NUMBER .)
    DOT             reduce using rule 45 (number_exp -> NUMBER .)
    NULL            reduce using rule 45 (number_exp -> NUMBER .)
    $end            reduce using rule 45 (number_exp -> NUMBER .)
    RANGE           shift and go to state 44


state 21

    (43) number_block_exp -> number_exp .

    NOT             reduce using rule 43 (number_block_exp -> number_exp .)
    COMMA           reduce using rule 43 (number_block_exp -> number_exp .)
    DOT             reduce using rule 43 (number_block_exp -> number_exp .)
    SEMICOLON       reduce using rule 43 (number_block_exp -> number_exp .)
    NULL            reduce using rule 43 (number_block_exp -> number_exp .)
    $end            reduce using rule 43 (number_block_exp -> number_exp .)
    EQ              reduce using rule 43 (number_block_exp -> number_exp .)


state 22

    (35) sn_exp -> WORD .

    DOT             reduce using rule 35 (sn_exp -> WORD .)
    WORD            reduce using rule 35 (sn_exp -> WORD .)
    NUMBER          reduce using rule 35 (sn_exp -> WORD .)
    COMMA           reduce using rule 35 (sn_exp -> WORD .)
    SEMICOLON       reduce using rule 35 (sn_exp -> WORD .)
    NULL            reduce using rule 35 (sn_exp -> WORD .)
    $end            reduce using rule 35 (sn_exp -> WORD .)
    EQ              reduce using rule 35 (sn_exp -> WORD .)


state 23

    (18) at_param_exp -> INNER AT . address_exp
    (20) at_param_exp -> INNER AT . address_exp EQ sn_exp
    (21) at_param_exp -> INNER AT . address_exp EQ NUMBER
    (22) address_exp -> . ipv4_exp
    (23) address_exp -> . domain_exp
    (24) address_exp -> . address_exp SEMICOLON ipv4_exp
    (25) address_exp -> . address_exp SEMICOLON domain_exp
    (28) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (26) domain_exp -> . domain_block_exp
    (27) domain_exp -> . domain_exp COMMA domain_block_exp
    (32) ipv4_number_block_exp -> . number_block_exp
    (33) ipv4_number_block_exp -> . NOT number_block_exp
    (34) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (39) domain_block_exp -> . sn_exp DOT sn_exp
    (40) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (41) domain_block_exp -> . domain_block_exp DOT sn_exp
    (42) domain_block_exp -> . domain_block_exp DOT NUMBER
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 28
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    address_exp                    shift and go to state 45
    sn_exp                         shift and go to state 19
    ipv4_exp                       shift and go to state 14
    domain_exp                     shift and go to state 15
    ipv4_number_block_exp          shift and go to state 16
    domain_block_exp               shift and go to state 17
    number_block_exp               shift and go to state 18
    number_exp                     shift and go to state 21

state 24

    (11) at_exp -> at_exp NULL at_protocol_exp .
    (16) at_protocol_exp -> at_protocol_exp . COMMA PROTOCOL
    (17) at_protocol_exp -> at_protocol_exp . COMMA NOT PROTOCOL

    NULL            reduce using rule 11 (at_exp -> at_exp NULL at_protocol_exp .)
    $end            reduce using rule 11 (at_exp -> at_exp NULL at_protocol_exp .)
    COMMA           shift and go to state 10


state 25

    (12) at_exp -> at_exp NULL at_param_exp .

    NULL            reduce using rule 12 (at_exp -> at_exp NULL at_param_exp .)
    $end            reduce using rule 12 (at_exp -> at_exp NULL at_param_exp .)


state 26

    (2) init_exp -> PROTOCOL NULL at_exp .
    (11) at_exp -> at_exp . NULL at_protocol_exp
    (12) at_exp -> at_exp . NULL at_param_exp

    $end            reduce using rule 2 (init_exp -> PROTOCOL NULL at_exp .)
    NULL            shift and go to state 8


state 27

    (3) init_exp -> PROTOCOL NULL address_exp . NULL at_exp
    (4) init_exp -> PROTOCOL NULL address_exp . NULL at_exp NULL param_exp
    (5) init_exp -> PROTOCOL NULL address_exp .
    (6) init_exp -> PROTOCOL NULL address_exp . NULL param_exp
    (7) init_exp -> PROTOCOL NULL address_exp . NULL port_number_block_exp
    (8) init_exp -> PROTOCOL NULL address_exp . NULL port_number_block_exp NULL param_exp
    (24) address_exp -> address_exp . SEMICOLON ipv4_exp
    (25) address_exp -> address_exp . SEMICOLON domain_exp

    NULL            shift and go to state 46
    $end            reduce using rule 5 (init_exp -> PROTOCOL NULL address_exp .)
    SEMICOLON       shift and go to state 34


state 28

    (33) ipv4_number_block_exp -> NOT . number_block_exp
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 33

    number_block_exp               shift and go to state 32
    number_exp                     shift and go to state 21

state 29

    (16) at_protocol_exp -> at_protocol_exp COMMA PROTOCOL .

    COMMA           reduce using rule 16 (at_protocol_exp -> at_protocol_exp COMMA PROTOCOL .)
    NULL            reduce using rule 16 (at_protocol_exp -> at_protocol_exp COMMA PROTOCOL .)
    $end            reduce using rule 16 (at_protocol_exp -> at_protocol_exp COMMA PROTOCOL .)


state 30

    (17) at_protocol_exp -> at_protocol_exp COMMA NOT . PROTOCOL

    PROTOCOL        shift and go to state 47


state 31

    (15) at_protocol_exp -> AT NOT PROTOCOL .

    COMMA           reduce using rule 15 (at_protocol_exp -> AT NOT PROTOCOL .)
    NULL            reduce using rule 15 (at_protocol_exp -> AT NOT PROTOCOL .)
    $end            reduce using rule 15 (at_protocol_exp -> AT NOT PROTOCOL .)


state 32

    (33) ipv4_number_block_exp -> NOT number_block_exp .
    (44) number_block_exp -> number_block_exp . COMMA number_exp

    DOT             reduce using rule 33 (ipv4_number_block_exp -> NOT number_block_exp .)
    SEMICOLON       reduce using rule 33 (ipv4_number_block_exp -> NOT number_block_exp .)
    NULL            reduce using rule 33 (ipv4_number_block_exp -> NOT number_block_exp .)
    $end            reduce using rule 33 (ipv4_number_block_exp -> NOT number_block_exp .)
    EQ              reduce using rule 33 (ipv4_number_block_exp -> NOT number_block_exp .)
    COMMA           shift and go to state 39


state 33

    (45) number_exp -> NUMBER .
    (46) number_exp -> NUMBER . RANGE NUMBER
    (47) number_exp -> NUMBER . RANGE NUMBER MOD NUMBER

    COMMA           reduce using rule 45 (number_exp -> NUMBER .)
    DOT             reduce using rule 45 (number_exp -> NUMBER .)
    SEMICOLON       reduce using rule 45 (number_exp -> NUMBER .)
    NULL            reduce using rule 45 (number_exp -> NUMBER .)
    $end            reduce using rule 45 (number_exp -> NUMBER .)
    EQ              reduce using rule 45 (number_exp -> NUMBER .)
    NOT             reduce using rule 45 (number_exp -> NUMBER .)
    RANGE           shift and go to state 44


state 34

    (24) address_exp -> address_exp SEMICOLON . ipv4_exp
    (25) address_exp -> address_exp SEMICOLON . domain_exp
    (28) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (26) domain_exp -> . domain_block_exp
    (27) domain_exp -> . domain_exp COMMA domain_block_exp
    (32) ipv4_number_block_exp -> . number_block_exp
    (33) ipv4_number_block_exp -> . NOT number_block_exp
    (34) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (39) domain_block_exp -> . sn_exp DOT sn_exp
    (40) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (41) domain_block_exp -> . domain_block_exp DOT sn_exp
    (42) domain_block_exp -> . domain_block_exp DOT NUMBER
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 28
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    ipv4_exp                       shift and go to state 48
    domain_exp                     shift and go to state 49
    ipv4_number_block_exp          shift and go to state 16
    domain_block_exp               shift and go to state 17
    number_block_exp               shift and go to state 18
    sn_exp                         shift and go to state 19
    number_exp                     shift and go to state 21

state 35

    (27) domain_exp -> domain_exp COMMA . domain_block_exp
    (39) domain_block_exp -> . sn_exp DOT sn_exp
    (40) domain_block_exp -> . ipv4_number_block_exp DOT sn_exp
    (41) domain_block_exp -> . domain_block_exp DOT sn_exp
    (42) domain_block_exp -> . domain_block_exp DOT NUMBER
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER
    (32) ipv4_number_block_exp -> . number_block_exp
    (33) ipv4_number_block_exp -> . NOT number_block_exp
    (34) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    WORD            shift and go to state 22
    NUMBER          shift and go to state 20
    NOT             shift and go to state 28

    domain_block_exp               shift and go to state 50
    sn_exp                         shift and go to state 19
    ipv4_number_block_exp          shift and go to state 51
    number_block_exp               shift and go to state 18
    number_exp                     shift and go to state 21

state 36

    (28) ipv4_exp -> ipv4_number_block_exp DOT . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (40) domain_block_exp -> ipv4_number_block_exp DOT . sn_exp
    (32) ipv4_number_block_exp -> . number_block_exp
    (33) ipv4_number_block_exp -> . NOT number_block_exp
    (34) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 28
    WORD            shift and go to state 22
    NUMBER          shift and go to state 20

    ipv4_number_block_exp          shift and go to state 52
    sn_exp                         shift and go to state 53
    number_block_exp               shift and go to state 18
    number_exp                     shift and go to state 21

state 37

    (41) domain_block_exp -> domain_block_exp DOT . sn_exp
    (42) domain_block_exp -> domain_block_exp DOT . NUMBER
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER

    NUMBER          shift and go to state 55
    WORD            shift and go to state 22

    sn_exp                         shift and go to state 54

state 38

    (34) ipv4_number_block_exp -> number_block_exp NOT . number_block_exp
    (43) number_block_exp -> . number_exp
    (44) number_block_exp -> . number_block_exp COMMA number_exp
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 33

    number_block_exp               shift and go to state 56
    number_exp                     shift and go to state 21

state 39

    (44) number_block_exp -> number_block_exp COMMA . number_exp
    (45) number_exp -> . NUMBER
    (46) number_exp -> . NUMBER RANGE NUMBER
    (47) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 33

    number_exp                     shift and go to state 57

state 40

    (39) domain_block_exp -> sn_exp DOT . sn_exp
    (35) sn_exp -> . WORD
    (36) sn_exp -> . NUMBER WORD
    (37) sn_exp -> . sn_exp WORD
    (38) sn_exp -> . sn_exp NUMBER

    WORD            shift and go to state 22
    NUMBER          shift and go to state 59

    sn_exp                         shift and go to state 58

state 41

    (37) sn_exp -> sn_exp WORD .
